--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 __pycache__/
 .python-version
 data/user_connect_db.sqlite
+data/REE_data.csv
+data/REE_data_aggregated_by_10mn.csv
+data/REE_data_aggregated_by_1d.csv
+data/REE_data_aggregated_by_1h.csv
