Add a cache system to refresh the data at the app. execution time

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 __pycache__/
 .python-version
+cache-directory/
 data/user_connect_db.sqlite
 data/REE_data.csv
 data/REE_data_aggregated_by_10mn.csv
